Added MemeDream2 to dropdown menu

--- a/src/DVCS_Website/DVCS_Website.csproj
+++ b/src/DVCS_Website/DVCS_Website.csproj
@@ -194,8 +194,10 @@
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Account\Web.config" />
     <Content Include="Images\Cooking-Memes-1.png" />
+    <Content Include="Images\Goals-Meme.jpg" />
     <Content Include="Pages\Ipsum.aspx" />
     <Content Include="Pages\MemeDream.aspx" />
+    <Content Include="Pages\MemeDream2.aspx" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
@@ -380,6 +382,13 @@
     </Compile>
     <Compile Include="Pages\MemeDream.aspx.designer.cs">
       <DependentUpon>MemeDream.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\MemeDream2.aspx.cs">
+      <DependentUpon>MemeDream2.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Pages\MemeDream2.aspx.designer.cs">
+      <DependentUpon>MemeDream2.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
